Exposing Katalon process for management, update dependencies